manifests/apps/searxng/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng-ingress
  namespace: searxng
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare-prod"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - searxng.wpcapp.net
      secretName: searxng-tls-secret
  rules:
    - host: searxng.wpcapp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: searxng
                port:
                  number: 8080
